Prevent overflow of user's name on profiles

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -46,6 +46,7 @@ div#profile_banner {
       @media #{$media_query} {
         left: $picture_size;
         top: $picture_size / 3;
+        max-width: calc(100% - #{$picture_size});
       }
     }
 
